# codecaliper

./: .editorconfig  .gitattributes  .gitignore  .mailmap  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PERMISSIONS.md  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  grammar-bump.yml  release.yml
constraints/: build.txt  ci.txt  docs.txt  retrain.txt
docs/: adding-a-language.md  api.md  contributing.md  honesty.md  index.md  quickstart.md  validation.md
docs/spec/: divergences.md  rulings.md
src/codecaliper/: __init__.py  api.py  canonical.py  cli.py  errors.py  model.py
src/codecaliper/languages/: __init__.py  base.py  go.py  java.py  python.py
src/codecaliper/metrics/: base.py  cognitive.py  cyclomatic.py  halstead.py  loc.py  mi.py
src/codecaliper/readability/: __init__.py  base.py  bw2010.py  granularity.py  retrain.py
src/codecaliper/spec/: __init__.py  registry.py  validated_grammars.toml
src/codecaliper/spec/rulings/: bw.toml  cognitive.toml  core.toml  cyclomatic.toml  halstead.toml  index.toml  loc.toml  mi.toml  tokenization.toml
src/codecaliper/syntax/: _treesitter.py  grammars.py  tokens.py
tests/: conftest.py  test_bw_port_fidelity.py  test_cli.py  test_consistency_corpus.py  test_determinism.py  test_grammar_integrity.py  test_measure_behavior.py  test_perf_smoke.py  test_python_lane_crosscheck.py  test_spec_coverage.py  test_spec_drift.py  tools_snapshot.py
tests/_reference/: bw_stdlib.py  py_ast_lane.py
tests/corpus/go/go-boolop-001/: expected.toml  input.go
tests/corpus/go/go-features-001/: expected.toml  input.go
tests/corpus/go/go-if-elseif-001/: expected.toml  input.go
tests/corpus/go/go-labeled-jump-001/: expected.toml  input.go
tests/corpus/go/go-loops-001/: expected.toml  input.go
tests/corpus/go/go-recursion-001/: expected.toml
tests/corpus/go/go-select-001/: expected.toml  input.go
tests/corpus/go/go-switch-001/: expected.toml  input.go
tests/corpus/java/java-block-comment-001/: expected.toml  input.java
tests/corpus/java/java-boolop-catch-001/: expected.toml  input.java
tests/corpus/java/java-contextual-001/: expected.toml  input.java
tests/corpus/java/java-elseif-001/: expected.toml  input.java
tests/corpus/java/java-labeled-jump-001/: expected.toml  input.java
tests/corpus/java/java-loops-001/: expected.toml  input.java
tests/corpus/java/java-snippet-constructor-001/: expected.toml  input.java
tests/corpus/java/java-switch-001/: expected.toml  input.java
tests/corpus/java/java-ternary-001/: expected.toml  input.java
tests/corpus/java/java-underscore-001/: expected.toml  input.java
tests/corpus/python/py-blank-lines-001/: expected.toml  input.py
tests/corpus/python/py-bw-fallback-001/: expected.toml  input.py
tests/corpus/python/py-cc-boolop-001/: expected.toml  input.py
tests/corpus/python/py-comprehension-001/: expected.toml  input.py
tests/corpus/python/py-concat-string-001/: expected.toml  input.py
tests/corpus/python/py-elif-chain-001/: expected.toml  input.py
tests/corpus/python/py-ellipsis-001/: expected.toml  input.py
tests/corpus/python/py-error-opacity-001/: expected.toml  input.py
tests/corpus/python/py-future-import-001/: expected.toml  input.py
tests/corpus/python/py-match-001/: expected.toml  input.py
tests/corpus/python/py-multiline-string-001/: expected.toml  input.py
tests/corpus/python/py-nested-function-001/: expected.toml  input.py
tests/corpus/python/py-recursion-001/: expected.toml
tests/corpus/python/py-ternary-001/: expected.toml  input.py
tests/corpus/python/py-tok-normalize-001/: expected.toml  input.py
tests/differential/: __init__.py  _harness.py  divergences.toml  pmd.toml  pmd_ruleset.xml  test_cognitive.py  test_lizard.py  test_pmd.py  test_radon.py  test_table.py
tests/snapshots/: corpus_values.json
tools/: fetch_pmd.py  gen_divergences.py  gen_spec_docs.py  update_snapshot.py
validation/breadth/: README.md  measure_corpora.py  results.txt
validation/breadth/python-demo/: fragment.py  method.py
validation/bw_faithfulness/: README.md  arbitrate.py  dataset.toml  extract.py  fetch.py  fig9_signs.toml  pin_inputs.py  pinned.py  report.py  stats.py  train.py
validation/bw_faithfulness/derived/: arbitration_report.json  arbitration_report.md  bw_faithfulness_report.json  bw_faithfulness_report.md  extract_meta.json  features.csv  train_results.json
(+5 files in other folders)
